# modnet

./: CMakeLists.txt  README.md  run.sh
cmake/: ThirdParty.cmake
model/person/: person_modnet_sim_384_512_opset16.mnn  person_modnet_sim_512_512_opset16.mnn  person_modnet_sim_512_672_opset16.mnn
model/sky/: sky_modnet_sim_384_512_opset16.mnn  sky_modnet_sim_512_512_opset16.mnn  sky_modnet_sim_512_672_opset16.mnn
modnet/: CMakeLists.txt
modnet/include/modnet/: common.h  inference.h  mnn_handler.h
modnet/src/: inference.cpp  mnn_handler.cpp
test/: CMakeLists.txt  main.cpp
